<resources>
    <string name="app_name">Library</string>
    <string name="title_activity_maps">Map</string>
    <string name="book_cover_img">book_cover_img</string>
    <string name="book_name">book_name</string>
    <string name="book_author">book_author</string>
    <string name="book_publication">book_publication</string>
    <string name="title_1">title_1</string>
    <string name="title_2">title_2</string>
    <string name="title_3">title_3</string>


    <string name="phoneNumber">Enter Phone Number</string>
    <string name="Enter_otp">Enter OTP</string>
    <string name="cancelbutton">Cancel</string>
    <string name="sendbutton">Send</string>
</resources>