<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/purple_200"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/book_cover_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name" />

        <TextView
            android:id="@+id/book_author_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author" />

        <TextView
            android:id="@+id/book_publication_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_publication" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_page_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name" />

        <TextView
            android:id="@+id/book_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name" />

    </LinearLayout>

</LinearLayout>